# fastapi-microservice-template

./: .gitignore  BingSiteAuth.xml  LICENSE  README.md  README.txt  _config.yml  docker-compose.infra.yml  docker-compose.yml  service_a_config.sh  service_b_config.sh
.github/workflows/: docker-publish.yml
_includes/: metadata.html
postgres-init/: example-data.sql  init-multi-db.sh
service-a/: .env  .env-example  .env-local  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
service-a/app/api/: endpoints.py
service-a/app/api/dependencies/: repository.py  service.py  session.py
service-a/app/api/routes/: ServiceRoutes.py  service_routes.py
service-a/app/config/: events.py  manager.py
service-a/app/config/settings/: base.py  development.py  environment.py  staging.py
service-a/app/model/db/: Pokemon.py
service-a/app/model/schemas/: PokemonTrainerDTO.py  global_response.py  pokemon_dto.py  pokemon_trainer_dto.py
service-a/app/repository/: base.py  events.py  table.py
service-a/app/repository/crud/: PokemonRepository.py  pokemon_repository.py
service-a/app/repository/migration/: env.py
service-a/app/repository/migration/versions/: 70e9421f8178_create_pokemons_table.py
service-a/app/repository/proxy/: ServiceBProxy.py  base.py  service_b_proxy.py
service-a/app/service/: CrudService.py  crud_service.py
service-b/: .env  .env-example  .env-local  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  uv
service-b/app/api/dependencies/: service.py
service-b/app/api/routes/: ServiceRoutes.py  service_routes.py
service-b/app/config/: events.py  manager.py
service-b/app/config/settings/: base.py  production.py
service-b/app/model/db/: Trainer.py
service-b/app/model/schemas/: PokemonTrainerDTO.py  TrainerDTO.py  base.py  pokemon_trainer_dto.py
service-b/app/repository/: base.py  database.py  table.py
service-b/app/repository/crud/: TrainerRepository.py  base.py  trainer_repository.py
service-b/app/repository/migration/: env.py
service-b/app/repository/migration/versions/: 514c3bd6f7f9_create_trainer_table.py
service-b/app/repository/proxy/: ServiceAProxy.py  service_a_proxy.py
service-b/app/service/: CrudService.py  crud_service.py
service-b/app/util/: datetime_formatter.py
