[project]
name = "service-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "async-timeout==5.0.1 ; python_full_version < '3.11'",
    "asyncpg==0.30.0",
    "certifi==2025.8.3",
    "click==8.2.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "greenlet==3.2.4 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "rignore==0.6.4",
    "sentry-sdk==2.35.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==1.4.41",
    "starlette==0.47.3",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "typer==0.17.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
]
